--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   camera: ^0.5.8+6
   flutter_local_notifications: ^1.4.4+4
   intl: ^0.16.1
-  shared_preferences: ^0.5.10
+  sqflite: ^1.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
