--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_local_notifications: ^1.4.4+4
   intl: ^0.16.1
   shared_preferences: ^0.5.12
+  fl_chart: ^0.11.1
 
 
   # The following adds the Cupertino Icons font to your application.
